# cv-workshop-hpc

./: .gitignore  README.md  check_environment.py  check_setup.sh  pyproject.toml  setup_local.sh  setup_workshop_env.sh  test_qwen3_vl.py
.claude/skills/cv-engineer/: CLAUDE.md  SKILL.md
data/: auto_label_qwen3_vl.py  auto_label_sam3_hf.py  benchmark_inference_speed.py  benchmark_serving.py  compare_sam3_vs_qwen.py  compliance_postprocessor.py  evaluate_2class_experiments.py  evaluate_yoloe_26n.py  filter_tiny_labels.py  generate_synthetic_ppe.py  train_baseline_ppe.py  visualize_gt_annotations.py
notebooks/: 00_test_environment.ipynb  01_ppe_getting_started.ipynb  02_inspect_iterate_train.ipynb  03_evaluate_and_deploy.ipynb  04_solution_walkthrough.ipynb  cv_copilot_prompt.md  cv_copilot_skill.md  demo_01_sam3_showcase.ipynb  demo_02_yoloe_deep_dive.ipynb  demo_03_distillation_pipeline.ipynb
notebooks/reference/: 01_setup_and_concepts.ipynb  02_autolabeling_with_foundation_models.ipynb  03_training_yolo26.ipynb
