[project]
name = "cv-workshop-hpc"
version = "1.0.0"
description = "AI Factory CV Workshop — PPE Compliance Detection (March 3-4, 2026)"
requires-python = ">=3.10,<3.11"

dependencies = [
    # Core ML
    # NOTE: torch + torchvision are installed separately by setup_workshop_env.sh
    # from the CUDA 12.1 PyTorch index. Pins here are for documentation only.
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "ultralytics>=8.4.19",
    "transformers>=5.0",
    "accelerate",
    "qwen-vl-utils>=0.0.14",
    "supervision>=0.27.0",

    # Experiment tracking & analysis
    "fiftyone",
    "mlflow",

    # Jupyter
    "ipykernel",
    "ipywidgets",

    # Data & visualization
    "matplotlib",
    "pandas",
    "numpy",
    "Pillow",
    "opencv-python-headless",

    # SAM3 text prompts (Ultralytics)
    "clip @ git+https://github.com/ultralytics/CLIP.git",

    # Utilities
    "pyyaml",
    "tqdm",
    "packaging",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.uv]
# PyTorch CUDA 12.1 wheels — required for HPC (A40 GPU, CUDA 12.3 driver)
# Compatible: cu121 wheels work with CUDA 12.3 driver (forward-compatible)
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
